# mnmx

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  add_commits.py  generate_history.py  generate_history_v2.py  package-lock.json  package.json  pyproject.toml
.backup/: CONTRIBUTING.md  SECURITY.md  package.json  tsconfig.json  vitest.config.ts
.backup/.github/: dependabot.yml
.backup/.github/workflows/: ci.yml
.backup/docs/: README.md  architecture.md  bridge-adapters.md  minimax-algorithm.md
.backup/engine/: Cargo.toml
.backup/engine/benches/: routing_bench.rs
.backup/engine/src/: bridge.rs  math.rs  minimax.rs  risk.rs  scoring.rs  state.rs  stats.rs
.backup/engine/tests/: minimax_test.rs  scoring_test.rs
.backup/examples/: basic-route.ts  compare-strategies.ts  custom-bridge.ts
.backup/scripts/: benchmark.ts
.backup/sdk/python/mnmx/: __init__.py  exceptions.py  math_utils.py  scoring.py  simulator.py
.backup/sdk/python/tests/: conftest.py  test_batch_analyzer.py  test_router.py
.backup/src/: index.ts
.backup/src/bridges/: allbridge.ts  debridge.ts  layerzero.ts
.backup/src/chains/: arbitrum.ts  ethereum.ts  index.ts  solana.ts
.backup/src/router/: index.ts  path-discovery.ts  scoring.ts
.backup/src/types/: index.ts
.backup/src/utils/: logger.ts  math.ts
.backup/tests/bridges/: debridge.test.ts  wormhole.test.ts
.backup/tests/integration/: end-to-end.test.ts
.backup/tests/router/: path-discovery.test.ts  scoring.test.ts
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  clippy.yml
benchmarks/: scoring-perf.ts
docs/: PERFORMANCE.md  TROUBLESHOOTING.md  python-sdk.md  routing-engine.md
engine/: Cargo.toml  README.md
engine/benches/: search_bench.rs
engine/src/: bridge.rs  evaluator.rs  lib.rs  math.rs  mev.rs  minimax.rs  path_discovery.rs  pruning.rs  risk.rs  router.rs  scoring.rs  state.rs  stats.rs  types.rs
engine/tests/: routing_test.rs
examples/: README.md
scripts/: backtest.ts  live-status.ts  live-transfer.ts
sdk/python/: pyproject.toml
sdk/python/mnmx/: backtester.py  batch_analyzer.py  bridges.py  cli.py  client.py  math_utils.py  pool_analyzer.py  router.py  simulator.py  types.py  utils.py
sdk/python/tests/: test_bridges.py  test_math.py  test_pool_analyzer.py  test_simulator.py
src/: errors.ts  version.ts
src/bridges/: adapter.ts  allbridge.ts  debridge.ts  index.ts  layerzero.ts  wormhole.ts
src/chains/: config.ts  index.ts
src/engine/: evaluator.ts  game-tree.ts  minimax.ts  move-ordering.ts  search-stats.ts  time-manager.ts  transposition.ts
src/router/: index.ts  minimax.ts  path-discovery.ts  ranking.ts  scoring.ts
src/solana/: executor.ts  mev-detector.ts  pool-analyzer.ts  state-reader.ts
src/types/: index.ts
src/utils/: hash.ts  logger.ts
tests/engine/: move-ordering.test.ts
tests/router/: fee-normalization.test.ts  minimax.test.ts  path-discovery.test.ts  scoring-weights.test.ts
