[package]
name = "mnmx-engine"
description = "MNMX cross-chain routing engine using minimax search with alpha-beta pruning"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "routing_bench"
harness = false
