[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnmx-sdk"
version = "0.1.0"
description = "Python SDK for the MNMX protocol - Minimax execution engine for autonomous on-chain agents on Solana"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "MNMX Team" },
]
keywords = ["solana", "defi", "mev", "minimax", "trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.5",
    "ruff>=0.1.0",
]

[project.scripts]
mnmx = "mnmx.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
