[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnmx-sdk"
version = "0.1.0"
description = "Cross-chain routing SDK using minimax search for optimal path discovery"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
mnmx = "mnmx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mnmx"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
